Add link to slider news

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="current" title="Homepage">Home<span class="icon-10"></span></a>
             <a href="about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a href="products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
+            <a href="pages/service.html" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="contact.html" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
@@ -219,7 +219,7 @@
                     </a>
                     <img src="images/news-1.jpg" alt="Transparência e confiabilidade">
                   </div>
-                  <h4>Transparência e confiabilidade</h4>
+                  <h4><a href="#fakelink" title="Transparência e confiabilidade">Transparência e confiabilidade</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -233,7 +233,7 @@
                     </a>
                     <img src="images/news-2.jpg" alt="Hospital Pérola Byington">
                   </div>
-                  <h4>Hospital Pérola Byington</h4>
+                  <h4><a href="#fakelink" title="Hospital Pérola Byington">Hospital Pérola Byington</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -247,7 +247,7 @@
                     </a>
                     <img src="images/news-3.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Tratamento de cobaias de plástico</h4>
+                  <h4><a href="#fakelink" title="Tratamento de cobaias de plástico">Tratamento de cobaias de plástico</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -261,7 +261,7 @@
                     </a>
                     <img src="images/news-4.jpg" alt="Condicionamento de atendimento">
                   </div>
-                  <h4>Condicionamento de atendimento</h4>
+                  <h4><a href="#fakelink" title="Condicionamento de atendimento">Condicionamento de atendimento</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -279,7 +279,7 @@
                     </a>
                     <img src="images/news-5.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Condicionamento de atendimento</h4>
+                  <h4><a href="#fakelink" title="Condicionamento de atendimento">Condicionamento de atendimento</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -293,7 +293,7 @@
                     </a>
                     <img src="images/news-6.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Tratamento de cobaias de plástico</h4>
+                  <h4><a href="#fakelink" title="Tratamento de cobaias de plástico">Tratamento de cobaias de plástico</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -307,7 +307,7 @@
                     </a>
                     <img src="images/news-7.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Hospital Pérola Byington</h4>
+                  <h4><a href="#fakelink" title="Hospital Pérola Byington">Hospital Pérola Byington</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -321,7 +321,7 @@
                     </a>
                     <img src="images/news-8.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Transparência e confiabilidade</h4>
+                  <h4><a href="#fakelink" title="Transparência e confiabilidade">Transparência e confiabilidade</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
