--- a/pages/service.html
+++ b/pages/service.html
@@ -142,7 +142,7 @@
                     </a>
                     <img src="../images/news-1.jpg" alt="Transparência e confiabilidade">
                   </div>
-                  <h4>Transparência e confiabilidade</h4>
+                  <h4><a href="#fakelink" title="Transparência e confiabilidade">Transparência e confiabilidade</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -156,7 +156,7 @@
                     </a>
                     <img src="../images/news-2.jpg" alt="Hospital Pérola Byington">
                   </div>
-                  <h4>Hospital Pérola Byington</h4>
+                  <h4><a href="#fakelink" title="Hospital Pérola Byington">Hospital Pérola Byington</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -170,7 +170,7 @@
                     </a>
                     <img src="../images/news-3.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Tratamento de cobaias de plástico</h4>
+                  <h4><a href="#fakelink" title="Tratamento de cobaias de plástico">Tratamento de cobaias de plástico</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -184,7 +184,7 @@
                     </a>
                     <img src="../images/news-4.jpg" alt="Condicionamento de atendimento">
                   </div>
-                  <h4>Condicionamento de atendimento</h4>
+                  <h4><a href="#fakelink" title="Condicionamento de atendimento">Condicionamento de atendimento</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -202,7 +202,7 @@
                     </a>
                     <img src="../images/news-5.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Condicionamento de atendimento</h4>
+                  <h4><a href="#fakelink" title="Condicionamento de atendimento">Condicionamento de atendimento</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -216,7 +216,7 @@
                     </a>
                     <img src="../images/news-6.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Tratamento de cobaias de plástico</h4>
+                  <h4><a href="#fakelink" title="Tratamento de cobaias de plástico">Tratamento de cobaias de plástico</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -230,7 +230,7 @@
                     </a>
                     <img src="../images/news-7.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Hospital Pérola Byington</h4>
+                  <h4><a href="#fakelink" title="Hospital Pérola Byington">Hospital Pérola Byington</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
@@ -244,7 +244,7 @@
                     </a>
                     <img src="../images/news-8.jpg" alt="Tratamento de cobaias de plástico">
                   </div>
-                  <h4>Transparência e confiabilidade</h4>
+                  <h4><a href="#fakelink" title="Transparência e confiabilidade">Transparência e confiabilidade</a></h4>
                   <span class="date">18 abriel de 2013 | 10 Comentários</span>
                   <p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
                 </article>
