--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
             </div>
           </form>
           <div class="alfa-social btn-group btn-group-justified">
-            <a href="#fakelink" class="ico-facebook btn"></a>
-            <a href="#fakelink" class="ico-twitter btn"></a>
-            <a href="#fakelink" class="ico-google btn"></a>
+            <a href="#fakelink" class="ico-facebook btn" target="_blank"></a>
+            <a href="#fakelink" class="ico-twitter btn" target="_blank"></a>
+            <a href="#fakelink" class="ico-google btn" target="_blank"></a>
           </div>
         </section>
         <div class="col-xs-12 col-sm-12 col-md-9 mb-0 hidden-xs hidden-sm">
@@ -148,9 +148,9 @@
               <h3 class="heading-3">Social</h3>
               <p>Nos acompanhe nas redes sociais</p>
               <ul class="list-b">
-                <li><span class="icon-6"></span>Facebook</li>
-                <li><span class="icon-6"></span>Twitter</li>
-                <li><span class="icon-6"></span>Google+</li>
+                <li><a href="https://www.facebook.com/pages/Alfa-Médico-Hospitalar/163098427181465" target="_blank"><span class="icon-6"></span>Facebook</a></li>
+                <li><a href="https://twitter.com/alfahospitalar" target="_blank"><span class="icon-6"></span>Twitter</a></li>
+                <li><a href="https://plus.google.com/b/103637413416321753138/" target="_blank"><span class="icon-6"></span>Google+</a></li>
               </ul>
             </div>
           </div>
