--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
           </form>
           <div class="alfa-social btn-group btn-group-justified">
-            <a href="#fakelink" class="ico-facebook btn"></a>
-            <a href="#fakelink" class="ico-twitter btn"></a>
-            <a href="#fakelink" class="ico-google btn"></a>
+            <a href="#fakelink" class="ico-facebook btn" target="_blank"></a>
+            <a href="#fakelink" class="ico-twitter btn" target="_blank"></a>
+            <a href="#fakelink" class="ico-google btn" target="_blank"></a>
           </div>
         </section>
         <div class="col-xs-12 col-sm-12 col-md-9 mb-0">
