Modify page Product Info

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <section class="row">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
           <div class="content-box border-content">
-            <h3 class="heading-1">Nosso catálogo</h3>
+            <h3 class="heading-1">Nossos catálogos</h3>
             <div class="item-thumbs">
               <a href="#fakelink" class="hover-wrap" title="Caltálogo">
               <span class="overlay-img"></span>
@@ -157,7 +157,7 @@
               <li><a href="#fakelink" title="Nutrição Parenteral"><span class="icon-6"></span>Nutrição Parenteral</a></li>
               <li><a href="#fakelink" title="Tecnologia de Infusão"><span class="icon-6"></span>Tecnologia de Infusão</a></li>
               <li><a href="#fakelink" title="Anestesiologia"><span class="icon-6"></span>Anestesiologia</a></li>
-              <li><a href="#fakelink" title="Linha de Cateteres"><span class="icon-6"></span>Linha de Cateteres</a></li>
+              <li><a href="#fakelink" title="Veja toda linha de produtos"><span class="icon-6"></span>Veja toda linha de produtos</a></li>
             </ul>
           </div>
         </div>
@@ -206,7 +206,7 @@
         </div>
       </section>
       <section class="slider2">
-        <h3 class="heading-1">Últimas Notícias</h3>
+        <h3 class="heading-1"><a href="#fakelink" title="Últimas Notícias">Últimas Notícias</a></h3>
         <ul class="slides">
           <li>
             <div class="row">
@@ -500,7 +500,7 @@
             </div>
             <div class="col-sm-5 mb-0">
               <div class="box-footer">
-                <h3 class="heading-1">Nosso catálogo</h3>
+                <h3 class="heading-1">Nossos catálogos</h3>
                 <div class="item-thumbs">
                   <a href="#fakelink" class="hover-wrap" title="Caltálogo">
                   <span class="overlay-img"></span>
