--- a/products/product.html
+++ b/products/product.html
@@ -127,7 +127,7 @@
     </header>
     <main class="container" role="main">
       <h1 class="title-front mb-3">Nutren® Active Chocolate</h1>
-      <section class="row">
+      <section class="row mb-4">
         <figure class="fig-hover col-xs-12 col-sm-5 col-md-6 col-sm-push-7 col-md-push-6">
           <img src="../images/prod-5.jpg" class="img-responsive" alt="Nestlé Health Science">
         </figure>
