Add breadcrumb in some pages
Fix some bugs in others pages (html + css)

--- a/products/list.html
+++ b/products/list.html
@@ -126,6 +126,14 @@
       </div>
     </header>
     <main class="container" role="main">
+			<nav class="row">
+	    	<div class="col-xs-12">
+	    		<ol class="breadcrumb">
+					  <li><a href="../index.html" title="Home">Home</a></li>
+					  <li><a href="products.html" title="Produtos">Produtos</a></li>
+					</ol>
+	    	</div>
+    	</nav>
       <h1 class="title-front-news mb-3">Linha de produtos <strong>Nestlé Health Science</strong></h1>
       <section class="row">
         <div class="col-xs-12">
@@ -133,14 +141,14 @@
             <div class="row">
             	<div class="col-md-4 mg-0">
             		<figure class="figure-box fig-hover">
-            		  <a href="news.html" title="Nutren® Active Banana"><img src="../images/prod-4.jpg" class="img-responsive" alt="Nutren® Active Banana"></a>
+            		  <a href="product.html" title="Nutren® Active Banana"><img src="../images/prod-4.jpg" class="img-responsive" alt="Nutren® Active Banana"></a>
             		</figure>
             	</div>
             	<div class="col-md-8">
-            		<h2 class="heading-news"><a href="news.html" title="Nutren® Active Banana">Nutren® Active Banana</a></h2>
+            		<h2 class="heading-news"><a href="product.html" title="Nutren® Active Banana">Nutren® Active Banana</a></h2>
             		<p>É um delicioso suplemento 100% sabor NESTLÉ®, ideal para quem busca a reeducação alimentar mesmo sem tempo para se alimentar corretamente. NUTREN® Active contém 25 vitaminas e minerais, além de ser uma importante fonte de proteínas. NUTREN® Active possui Prebio 1, um avançado ingrediente desenvolvido pela NESTLÉ® que contribui com a saúde do sistema digestório, melhorando o aproveitamento dos nutrientes presentes nos alimentos. NUTREN® Active pode ser consumido a qualquer hora, frio ou quente. Com NUTREN® Active, seu dia fica mais completo.</p>
             		<footer class="clearfix">
-            		  <a href="news.html" class="read-more" title="Nutren® Active Banana">Saiba mais<span class="icon-16"></span></a>
+            		  <a href="product.html" class="read-more" title="Nutren® Active Banana">Saiba mais<span class="icon-16"></span></a>
             		</footer>
             	</div>
             </div>
@@ -149,14 +157,14 @@
             <div class="row">
             	<div class="col-md-4 mg-0">
             		<figure class="figure-box fig-hover">
-            		  <a href="news.html" title="Nutren® Senior 200 ml Baunilha"><img src="../images/prod-6.jpg" class="img-responsive" alt="Nutren® Senior 200 ml Baunilha"></a>
+            		  <a href="product.html" title="Nutren® Senior 200 ml Baunilha"><img src="../images/prod-6.jpg" class="img-responsive" alt="Nutren® Senior 200 ml Baunilha"></a>
             		</figure>
             	</div>
             	<div class="col-md-8">
-            		<h2 class="heading-news"><a href="news.html" title="Nutren® Senior 200 ml Baunilha">Nutren® Senior 200 ml Baunilha</a></h2>
+            		<h2 class="heading-news"><a href="product.html" title="Nutren® Senior 200 ml Baunilha">Nutren® Senior 200 ml Baunilha</a></h2>
             		<p>Nutren Senior é um suplemento nutricional completo, para uso oral ou enteral, formulado com nutrientes essenciais para os idosos como ACT 3, que é uma combinação única de proteínas, cálcio e vitamina D.  Possui também Prebio1, que é um composto exclusivo da Nestlé a base de inulina e FOS (frutoligossacarideos) que contribui para o equilíbrio da flora intestinal. Contém EPA/DHA e alta quantidade de vitamina do complexo B (folato, B1, B2 ) zinco e selênio, para auxiliar no estado nutricional dos pacientes desnutridos ou em risco de desnutrição, e melhorar a força e a capacidade funcional. Isento de lactose.</p>
             		<footer class="clearfix">
-            		  <a href="news.html" class="read-more" title="Nutren® Senior 200 ml Baunilha">Saiba mais<span class="icon-16"></span></a>
+            		  <a href="product.html" class="read-more" title="Nutren® Senior 200 ml Baunilha">Saiba mais<span class="icon-16"></span></a>
             		</footer>
             	</div>
             </div>
@@ -165,14 +173,14 @@
             <div class="row">
             	<div class="col-md-4 mg-0">
             		<figure class="figure-box fig-hover">
-            		  <a href="news.html" title="Nutren® Active Chocolate"><img src="../images/prod-5.jpg" class="img-responsive" alt="Nutren® Active Chocolate"></a>
+            		  <a href="product.html" title="Nutren® Active Chocolate"><img src="../images/prod-5.jpg" class="img-responsive" alt="Nutren® Active Chocolate"></a>
             		</figure>
             	</div>
             	<div class="col-md-8">
-            		<h2 class="heading-news"><a href="news.html" title="Nutren® Active Chocolate">Nutren® Active Chocolate</a></h2>
+            		<h2 class="heading-news"><a href="product.html" title="Nutren® Active Chocolate">Nutren® Active Chocolate</a></h2>
             		<p>É um delicioso suplemento 100% sabor NESTLÉ®, ideal para quem busca a reeducação alimentar mesmo sem tempo para se alimentar corretamente. NUTREN® Active contém 25 vitaminas e minerais, além de ser uma importante fonte de proteínas. NUTREN® Active possui Prebio 1, um avançado ingrediente desenvolvido pela NESTLÉ® que contribui com a saúde do sistema digestório, melhorando o aproveitamento dos nutrientes presentes nos alimentos. NUTREN® Active pode ser consumido a qualquer hora, frio ou quente. Com NUTREN® Active, seu dia fica mais completo.</p>
             		<footer class="clearfix">
-            		  <a href="news.html" class="read-more" title="Nutren® Active Chocolate">Saiba mais<span class="icon-16"></span></a>
+            		  <a href="product.html" class="read-more" title="Nutren® Active Chocolate">Saiba mais<span class="icon-16"></span></a>
             		</footer>
             	</div>
             </div>
@@ -181,14 +189,14 @@
             <div class="row">
             	<div class="col-md-4 mg-0">
             		<figure class="figure-box fig-hover">
-            		  <a href="news.html" title="Nestlé NAN Pro 2"><img src="../images/prod-8.jpg" class="img-responsive" alt="Nestlé NAN Pro 2"></a>
+            		  <a href="product.html" title="Nestlé NAN Pro 2"><img src="../images/prod-8.jpg" class="img-responsive" alt="Nestlé NAN Pro 2"></a>
             		</figure>
             	</div>
             	<div class="col-md-8">
-            		<h2 class="heading-news"><a href="news.html" title="Nestlé NAN Pro 2">Nestlé NAN Pro 2</a></h2>
+            		<h2 class="heading-news"><a href="product.html" title="Nestlé NAN Pro 2">Nestlé NAN Pro 2</a></h2>
             		<p>NAN 2 é um leite de transição para lactentes a partir dos 6 meses de idade, sem risco de desenvolver alergias, que em conjunto com outros alimentos, faz parte da alimentação diversificada do bebé. Não deve ser usado como substituto do leite materno durante os primeiros 6 meses de idade. OPTI PRO2 – Uma mistura proteica adaptada para fornecer a quantidade certa de proteínas necessárias ao crescimento do bebé sem sobrecarregar os órgãos ainda imaturos.</p>
             		<footer class="clearfix">
-            		  <a href="news.html" class="read-more" title="Nestlé NAN Pro 2">Saiba mais<span class="icon-16"></span></a>
+            		  <a href="product.html" class="read-more" title="Nestlé NAN Pro 2">Saiba mais<span class="icon-16"></span></a>
             		</footer>
             	</div>
             </div>
